
<ScrollView android:id="@+id/ScrollView01" 
android:layout_width="fill_parent" 
android:layout_height="wrap_content" 
xmlns:android="http://schemas.android.com/apk/res/android">
		<LinearLayout 
			android:id="@+id/LinearLayout01" 
			android:layout_width="fill_parent" 
			android:orientation="vertical"
			android:layout_height="wrap_content">

		<Button
		    android:id="@+id/bA1"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:paddingBottom="10dip"
		    android:text="@string/hotline"
		    android:textSize="@dimen/size12" >
</Button>

		<Button
		    android:id="@+id/bA2"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:paddingBottom="10dip"
		    android:text="@string/points"
		    
		    android:textSize="@dimen/size12" >
</Button>
		<Button  
			android:id="@+id/bA3" 
			android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:paddingBottom="10dip"
		    android:text="@string/incase"
		    
		    android:textSize="@dimen/size12" ></Button>
		<Button 
			android:id="@+id/bA4" 
			android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:paddingBottom="10dip"
		    android:text="@string/involved"
		    android:textSize="@dimen/size12" ></Button>
		<Button 
			android:id="@+id/bA5" 
			android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:paddingBottom="10dip"
		    android:text="@string/guidlines"
		    android:textSize="@dimen/size12" ></Button>	




</LinearLayout>

</ScrollView>
