<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content">
	

<LinearLayout
	
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:orientation="vertical"
	android:padding="5dip">

	

	<Button android:id="@+id/enterexp"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:textSize="@dimen/size14"
		android:text="@string/enterexp" 
		android:paddingBottom="5pt" />
	
	<Button android:id="@+id/listexp"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:textSize="@dimen/size14"
		android:text="@string/listeditexp" 
		android:paddingBottom="10dip" />
		
		<Button android:id="@+id/expreports"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:textSize="@dimen/size14"
		android:text="@string/expreports" 
		android:paddingBottom="5dip" />
			
		<Button android:id="@+id/expfilemaint"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:textSize="@dimen/size14"
		android:text="@string/expfilemaint" 
		android:paddingBottom="5dip" />	
		
	

	</LinearLayout>
</ScrollView>